[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/new_theme.tres" type="Theme" id=1]
[ext_resource path="res://Fonts/slkscre.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/Earth.png" type="Texture" id=3]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=4]
[ext_resource path="res://SFX/SFX_ButtonClick.mp3" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.149878, 0.4375, 0.0991211, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.2 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 51
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 85
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 175
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = 15.0
margin_top = 13.0
margin_right = 55.0
margin_bottom = 53.0
texture = ExtResource( 3 )
expand = true

[node name="EarthHealthBar" type="ProgressBar" parent="TextureRect"]
margin_left = 48.0
margin_top = 11.0
margin_right = 348.0
margin_bottom = 32.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 50.0

[node name="ScoreLable" type="Label" parent="."]
margin_left = 685.0
margin_top = 11.0
margin_right = 907.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 5 )
text = "Score:"
align = 1
valign = 1

[node name="Score" type="Label" parent="ScoreLable"]
anchor_left = 1.0
anchor_right = 1.77477
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TimerLable" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.0
margin_right = 92.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 9 )
text = "20"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="TimerLable"]

[node name="Start" type="Button" parent="."]
anchor_left = 0.251
anchor_top = 0.646
anchor_right = 0.749
anchor_bottom = 0.83
margin_left = -0.0800171
margin_top = 0.319946
margin_right = 0.0799561
margin_bottom = -0.400024
custom_fonts/font = SubResource( 6 )
text = "Click to Sart"
icon_align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MainMenu" type="Button" parent="."]
visible = false
anchor_left = 0.251
anchor_top = 0.646
anchor_right = 0.749
anchor_bottom = 0.83
margin_left = -0.0800171
margin_top = 0.319946
margin_right = 0.0799561
margin_bottom = -0.400024
custom_fonts/font = SubResource( 6 )
text = "Main Menu"
icon_align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HighScore" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -204.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 7 )
text = "High Score:0"
align = 1
valign = 1

[node name="YourScore" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -70.0
margin_bottom = 110.0
custom_fonts/font = SubResource( 7 )
text = "Your Socre:0"
align = 1
valign = 1

[node name="Title" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -529.0
margin_bottom = -174.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0.729412, 1, 1 )
custom_fonts/font = SubResource( 8 )
text = "Earth Invader"
align = 1
valign = 1
autowrap = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -25.0

[connection signal="timeout" from="TimerLable/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Start" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
